# shaderPlaygroundTemplate

./: CMakeLists.txt  README.md  imgui.ini  main.cpp  shader.frag  shader.vert
.cache/clangd/index/: glad.c.58544FC8ADB759E8.idx  glad.h.051EA09F7517008D.idx  imconfig.h.BF8AF0F350FF73DB.idx  imgui.cpp.33455AD63905D60D.idx  imgui.h.97C82DD8DFCB2E9A.idx  imgui.h.B59F8017345B657B.idx  imgui_demo.cpp.91681FFE88B5B479.idx  imgui_draw.cpp.54F74E34AA55F3C5.idx  imgui_impl_glfw.cpp.B05A4B5A1746941D.idx  imgui_impl_glfw.h.5F1280EB3FA066F0.idx  imgui_impl_opengl3.cpp.C8CE33E358C34BDE.idx  imgui_impl_opengl3.h.DA07C58013B8C48C.idx  imgui_impl_opengl3_loader.h.8C10D85476B1533C.idx  imgui_internal.h.D32722D5DA6259AB.idx  imgui_tables.cpp.6316464D3832B66E.idx  imgui_widgets.cpp.BCA1812583076606.idx  imstb_rectpack.h.169CE4B9FDE53443.idx  imstb_textedit.h.1A9B042B72F1F4EB.idx  imstb_truetype.h.E6EFFA1C80E89AFB.idx  khrplatform.h.D961B953576273AA.idx  main.cpp.1203C219B292B3AC.idx
glad/include/glad/: glad.h
glad/src/: glad.c
